--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -59,7 +59,7 @@
 					<object class="IBUIView" id="312759455">
 						<reference key="NSNextResponder" ref="1064479148"/>
 						<int key="NSvFlags">1298</int>
-						<string key="NSFrame">{{20, 20}, {280, 280}}</string>
+						<string key="NSFrame">{{20, 135}, {280, 280}}</string>
 						<reference key="NSSuperview" ref="1064479148"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -74,7 +74,7 @@
 					<object class="IBUIButton" id="39258673">
 						<reference key="NSNextResponder" ref="1064479148"/>
 						<int key="NSvFlags">1316</int>
-						<string key="NSFrame">{{100, 357}, {107, 37}}</string>
+						<string key="NSFrame">{{106, 423}, {107, 37}}</string>
 						<reference key="NSSuperview" ref="1064479148"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -100,15 +100,83 @@
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
 					</object>
+					<object class="IBUIView" id="520942190">
+						<reference key="NSNextResponder" ref="1064479148"/>
+						<int key="NSvFlags">1316</int>
+						<string key="NSFrame">{{220, 34}, {81, 81}}</string>
+						<reference key="NSSuperview" ref="1064479148"/>
+						<object class="NSColor" key="IBUIBackgroundColor" id="57307811">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MSAwLjIyNTM4NjAxMDggMAA</bytes>
+						</object>
+						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
+						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
+							<integer value="256" key="IBUIAccessibilityTraits"/>
+						</object>
+					</object>
+					<object class="IBUIView" id="415336248">
+						<reference key="NSNextResponder" ref="1064479148"/>
+						<int key="NSvFlags">1316</int>
+						<string key="NSFrame">{{119, 34}, {80, 80}}</string>
+						<reference key="NSSuperview" ref="1064479148"/>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MQA</bytes>
+							<object class="NSColorSpace" key="NSCustomColorSpace" id="722916472">
+								<int key="NSID">2</int>
+							</object>
+						</object>
+						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
+					</object>
+					<object class="IBUIView" id="355618943">
+						<reference key="NSNextResponder" ref="1064479148"/>
+						<int key="NSvFlags">1316</int>
+						<string key="NSFrame">{{20, 34}, {81, 81}}</string>
+						<reference key="NSSuperview" ref="1064479148"/>
+						<reference key="IBUIBackgroundColor" ref="57307811"/>
+						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
+						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
+							<integer value="256" key="IBUIAccessibilityTraits"/>
+						</object>
+					</object>
+					<object class="IBUILabel" id="915180721">
+						<reference key="NSNextResponder" ref="1064479148"/>
+						<int key="NSvFlags">1316</int>
+						<string key="NSFrame">{{20, 5}, {79, 21}}</string>
+						<reference key="NSSuperview" ref="1064479148"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="IBUIText">This piece</string>
+						<object class="NSColor" key="IBUITextColor" id="893480309">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAwIDAAA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+					</object>
+					<object class="IBUILabel" id="1039673840">
+						<reference key="NSNextResponder" ref="1064479148"/>
+						<int key="NSvFlags">1316</int>
+						<string key="NSFrame">{{220, 5}, {81, 21}}</string>
+						<reference key="NSSuperview" ref="1064479148"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="IBUIText">Next piece</string>
+						<reference key="IBUITextColor" ref="893480309"/>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+					</object>
 				</object>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
-					<object class="NSColorSpace" key="NSCustomColorSpace">
-						<int key="NSID">2</int>
-					</object>
+					<reference key="NSCustomColorSpace" ref="722916472"/>
 				</object>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 			</object>
@@ -165,6 +233,22 @@
 					</object>
 					<int key="connectionID">103</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">nextPieceView</string>
+						<reference key="source" ref="213738588"/>
+						<reference key="destination" ref="520942190"/>
+					</object>
+					<int key="connectionID">110</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">thisPieceView</string>
+						<reference key="source" ref="213738588"/>
+						<reference key="destination" ref="355618943"/>
+					</object>
+					<int key="connectionID">111</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -212,8 +296,13 @@
 						<reference key="object" ref="1064479148"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="312759455"/>
 							<reference ref="39258673"/>
+							<reference ref="312759455"/>
+							<reference ref="355618943"/>
+							<reference ref="915180721"/>
+							<reference ref="415336248"/>
+							<reference ref="1039673840"/>
+							<reference ref="520942190"/>
 						</object>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Game Root View</string>
@@ -229,6 +318,33 @@
 						<reference key="object" ref="39258673"/>
 						<reference key="parent" ref="1064479148"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">104</int>
+						<reference key="object" ref="520942190"/>
+						<reference key="parent" ref="1064479148"/>
+						<string key="objectName">Next Piece Preview</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">105</int>
+						<reference key="object" ref="415336248"/>
+						<reference key="parent" ref="1064479148"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">106</int>
+						<reference key="object" ref="355618943"/>
+						<reference key="parent" ref="1064479148"/>
+						<string key="objectName">This Piece Preview</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">108</int>
+						<reference key="object" ref="915180721"/>
+						<reference key="parent" ref="1064479148"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">109</int>
+						<reference key="object" ref="1039673840"/>
+						<reference key="parent" ref="1064479148"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -240,6 +356,13 @@
 					<string>10.IBEditorWindowLastContentRect</string>
 					<string>10.IBPluginDependency</string>
 					<string>102.IBPluginDependency</string>
+					<string>104.CustomClassName</string>
+					<string>104.IBPluginDependency</string>
+					<string>105.IBPluginDependency</string>
+					<string>106.CustomClassName</string>
+					<string>106.IBPluginDependency</string>
+					<string>108.IBPluginDependency</string>
+					<string>109.IBPluginDependency</string>
 					<string>2.IBAttributePlaceholdersKey</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
@@ -255,7 +378,14 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>UIApplication</string>
 					<string>UIResponder</string>
-					<string>{{1543, 727}, {320, 480}}</string>
+					<string>{{808, 111}, {320, 480}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>BitrisPieceView</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>BitrisPieceView</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSMutableDictionary">
@@ -272,7 +402,7 @@
 					<string>BitrisBoardView</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>BitrisGameController</string>
-					<string>{{1223, 557}, {320, 480}}</string>
+					<string>{{713, 175}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
@@ -292,7 +422,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">103</int>
+			<int key="maxID">111</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -346,12 +476,31 @@
 						<string key="NS.object.0">id</string>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">gameBoard</string>
-						<string key="NS.object.0">BitrisBoardView</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>gameBoard</string>
+							<string>nextPieceView</string>
+							<string>thisPieceView</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>BitrisBoardView</string>
+							<string>BitrisPieceView</string>
+							<string>BitrisPieceView</string>
+						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/BitrisGameController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">BitrisPieceView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/BitrisPieceView.h</string>
 					</object>
 				</object>
 			</object>
@@ -498,6 +647,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">UIKit.framework/Headers/UIControl.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UILabel</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UILabel.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
