--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -53,12 +53,12 @@
 			</object>
 			<object class="IBUIView" id="1064479148">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">1298</int>
+				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBUIView" id="312759455">
 						<reference key="NSNextResponder" ref="1064479148"/>
-						<int key="NSvFlags">1298</int>
+						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{20, 135}, {280, 280}}</string>
 						<reference key="NSSuperview" ref="1064479148"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -71,38 +71,9 @@
 							<boolean value="NO" key="IBUIIsAccessibilityElement"/>
 						</object>
 					</object>
-					<object class="IBUIButton" id="39258673">
-						<reference key="NSNextResponder" ref="1064479148"/>
-						<int key="NSvFlags">1316</int>
-						<string key="NSFrame">{{106, 423}, {107, 37}}</string>
-						<reference key="NSSuperview" ref="1064479148"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">15</double>
-							<int key="NSfFlags">16</int>
-						</object>
-						<int key="IBUIButtonType">1</int>
-						<string key="IBUINormalTitle">Next Shape</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-						</object>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC41AA</bytes>
-						</object>
-					</object>
 					<object class="IBUIView" id="520942190">
 						<reference key="NSNextResponder" ref="1064479148"/>
-						<int key="NSvFlags">1316</int>
+						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{220, 34}, {81, 81}}</string>
 						<reference key="NSSuperview" ref="1064479148"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="57307811">
@@ -116,7 +87,7 @@
 					</object>
 					<object class="IBUIView" id="415336248">
 						<reference key="NSNextResponder" ref="1064479148"/>
-						<int key="NSvFlags">1316</int>
+						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{119, 34}, {80, 80}}</string>
 						<reference key="NSSuperview" ref="1064479148"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -130,7 +101,7 @@
 					</object>
 					<object class="IBUIView" id="355618943">
 						<reference key="NSNextResponder" ref="1064479148"/>
-						<int key="NSvFlags">1316</int>
+						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 34}, {81, 81}}</string>
 						<reference key="NSSuperview" ref="1064479148"/>
 						<reference key="IBUIBackgroundColor" ref="57307811"/>
@@ -141,7 +112,7 @@
 					</object>
 					<object class="IBUILabel" id="915180721">
 						<reference key="NSNextResponder" ref="1064479148"/>
-						<int key="NSvFlags">1316</int>
+						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 5}, {79, 21}}</string>
 						<reference key="NSSuperview" ref="1064479148"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -158,13 +129,41 @@
 					</object>
 					<object class="IBUILabel" id="1039673840">
 						<reference key="NSNextResponder" ref="1064479148"/>
-						<int key="NSvFlags">1316</int>
+						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{220, 5}, {81, 21}}</string>
 						<reference key="NSSuperview" ref="1064479148"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="IBUIText">Next piece</string>
+						<reference key="IBUITextColor" ref="893480309"/>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+					</object>
+					<object class="IBUILabel" id="3930823">
+						<reference key="NSNextResponder" ref="1064479148"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{104, 439}, {50, 21}}</string>
+						<reference key="NSSuperview" ref="1064479148"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="IBUIText">Score:</string>
+						<reference key="IBUITextColor" ref="893480309"/>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+					</object>
+					<object class="IBUILabel" id="968868087">
+						<reference key="NSNextResponder" ref="1064479148"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{162, 439}, {42, 21}}</string>
+						<reference key="NSSuperview" ref="1064479148"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="IBUIText">0</string>
 						<reference key="IBUITextColor" ref="893480309"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">1</int>
@@ -225,15 +224,6 @@
 					<int key="connectionID">101</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">nextPiece</string>
-						<reference key="source" ref="39258673"/>
-						<reference key="destination" ref="213738588"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">103</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">nextPieceView</string>
 						<reference key="source" ref="213738588"/>
@@ -248,6 +238,14 @@
 						<reference key="destination" ref="355618943"/>
 					</object>
 					<int key="connectionID">111</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">scoreView</string>
+						<reference key="source" ref="213738588"/>
+						<reference key="destination" ref="968868087"/>
+					</object>
+					<int key="connectionID">114</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -296,13 +294,14 @@
 						<reference key="object" ref="1064479148"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="39258673"/>
 							<reference ref="312759455"/>
 							<reference ref="355618943"/>
 							<reference ref="915180721"/>
 							<reference ref="415336248"/>
 							<reference ref="1039673840"/>
 							<reference ref="520942190"/>
+							<reference ref="3930823"/>
+							<reference ref="968868087"/>
 						</object>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Game Root View</string>
@@ -312,11 +311,6 @@
 						<reference key="object" ref="312759455"/>
 						<reference key="parent" ref="1064479148"/>
 						<string key="objectName">Main Board</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">102</int>
-						<reference key="object" ref="39258673"/>
-						<reference key="parent" ref="1064479148"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">104</int>
@@ -345,6 +339,17 @@
 						<reference key="object" ref="1039673840"/>
 						<reference key="parent" ref="1064479148"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">112</int>
+						<reference key="object" ref="3930823"/>
+						<reference key="parent" ref="1064479148"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">113</int>
+						<reference key="object" ref="968868087"/>
+						<reference key="parent" ref="1064479148"/>
+						<string key="objectName">Score Label</string>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -355,7 +360,6 @@
 					<string>-2.CustomClassName</string>
 					<string>10.IBEditorWindowLastContentRect</string>
 					<string>10.IBPluginDependency</string>
-					<string>102.IBPluginDependency</string>
 					<string>104.CustomClassName</string>
 					<string>104.IBPluginDependency</string>
 					<string>105.IBPluginDependency</string>
@@ -363,6 +367,8 @@
 					<string>106.IBPluginDependency</string>
 					<string>108.IBPluginDependency</string>
 					<string>109.IBPluginDependency</string>
+					<string>112.IBPluginDependency</string>
+					<string>113.IBPluginDependency</string>
 					<string>2.IBAttributePlaceholdersKey</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
@@ -378,13 +384,14 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>UIApplication</string>
 					<string>UIResponder</string>
-					<string>{{808, 111}, {320, 480}}</string>
+					<string>{{673, 266}, {320, 480}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>BitrisPieceView</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>BitrisPieceView</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>BitrisPieceView</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -422,7 +429,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">111</int>
+			<int key="maxID">114</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -471,22 +478,20 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">BitrisGameController</string>
 					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">nextPiece</string>
-						<string key="NS.object.0">id</string>
-					</object>
 					<object class="NSMutableDictionary" key="outlets">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>gameBoard</string>
 							<string>nextPieceView</string>
+							<string>scoreView</string>
 							<string>thisPieceView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>BitrisBoardView</string>
 							<string>BitrisPieceView</string>
+							<string>UILabel</string>
 							<string>BitrisPieceView</string>
 						</object>
 					</object>
@@ -631,22 +636,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">UIKit.framework/Headers/UIApplication.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UIButton</string>
-					<string key="superclassName">UIControl</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBFrameworkSource</string>
-						<string key="minorKey">UIKit.framework/Headers/UIButton.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UIControl</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBFrameworkSource</string>
-						<string key="minorKey">UIKit.framework/Headers/UIControl.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
